--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,5 @@ target_include_directories(metronoom PUBLIC ${FMT_INCLUDE_DIRS})
 target_compile_options(metronoom PUBLIC ${FMT_CFLAGS_OTHER})
 
 set_target_properties(metronoom PROPERTIES OUTPUT_NAME metronoom)
+
+target_link_libraries(metronoom rt)
